<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="vm" type="com.sendbird.assignment_android.searchbook.viewmodel.SearchResultViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent">


            <EditText
                android:id="@+id/search_edit"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="50dp"
                android:hint="@string/search_edit_hint"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textSize="17sp"
                android:textCursorDrawable="@drawable/purple_cursor"
                android:backgroundTint="#742DDD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/search_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="90dp"
                android:layout_height="46dp"
                android:layout_marginEnd="20dp"
                android:text="@string/search_edit_hint"
                android:gravity="center"
                android:textSize="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/search_edit"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_result_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="92dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/search_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>